// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <label
        class="StyledText-sc-1sadyjn-0 gGKbiL"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 cXKIgE FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 edcgVv"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 ffDzPl"
            disabled=""
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iObOoS FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 edcgVv"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 khwsYY"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <label
        class="StyledText-sc-1sadyjn-0 gGKbiL"
      >
        Some input
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 iSRQOX"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 iObOoS FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 edcgVv"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 khwsYY"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <label
        class="StyledText-sc-1sadyjn-0 gGKbiL"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 iObOoS FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 edcgVv"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 khwsYY"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <label
        class="StyledText-sc-1sadyjn-0 gGKbiL"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 Igvdy FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 edcgVv"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 khwsYY"
            value="Hi people"
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 OmJsh"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fZqRnx"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo"
    >
      <label
        class="StyledText-sc-1sadyjn-0 gGKbiL"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 iObOoS FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 edcgVv"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 khwsYY"
            value="Hi people"
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fWPyPA"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
